--- a/client/src/Components/Navbar/Navbar.css
+++ b/client/src/Components/Navbar/Navbar.css
@@ -1,4 +1,5 @@
 .navbar {
+  position: relative;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -9,30 +10,39 @@
   left: 0;
   z-index: 100;
   transition: 0.5s;
-  background-color: #020a15b4;
-  /* border: 1px solid red; */
-}
-.bg-dark {
-  padding: 10px;
-  box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.514), 0 0px 20px 0 rgba(0, 0, 0, 0.548);
-  /* background-color: #090a0b; */
   background-color: #020a15;
-  color: white;
-}
-.navbar__nav {
-  /* border: 5px solid yellow; */
-  display: flex;
-  /* margin-left: 40px; */
-}
-.main-nav {
-  width: 700px;
+  box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.514), 0 0px 20px 0 rgba(0, 0, 0, 0.548);
   /* border: 1px solid red; */
-  display: flex;
-  justify-content: space-around;
 }
 
-.navbar__nav__link {
-  /* border: 2px solid red; */
+.navbar__first-menu {
+  display: flex;
+  width: 100%;
+  height: 150px;
+  position: absolute;
+  top: 60px;
+  left: -100%;
+  opacity: 0;
+  transition: all 0.5s ease;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+}
+.navbar__first-menu.active {
+  background: #020a15;
+  left: 0;
+  opacity: 1;
+  transition: all 0.5s ease;
+  z-index: 1;
+}
+
+.navbar__second-menu {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 150px;
+}
+.navbar__link {
   text-transform: uppercase;
   font-weight: 500;
   padding: 10px;
@@ -40,19 +50,26 @@
   color: white;
   font-size: 0.8rem;
 }
-.navbar__nav__link:hover {
-  color: #ff5029;
+.navbar__link:hover {
+  color: #c42012;
 }
-.active {
-  color: #ff5029;
-}
-.navbar__user {
-  /* border: 3px solid greenyellow; */
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
+/* .active {
+  color: #c42012;
+} */
 
-  /* width: 600px; */
+.mobile-menu {
+  display: block;
+  transition: 0.5s;
+}
+.menu-icon {
+  color: white;
+  font-size: 1.5rem;
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+}
+.menu-icon:active {
+  animation: rotation 0.5s 1 linear;
 }
 
 @media (min-width: 480px) {
@@ -65,21 +82,31 @@
 }
 
 @media (min-width: 768px) {
-  .navbar {
-    /* padding: 10px; */
+  .mobile-menu {
+    display: none;
   }
-  .bg-dark {
-    /* padding: 15px 40px; */
+  .navbar__first-menu {
+    position: static;
+
+    width: 500px;
+    flex-direction: row;
+    justify-content: space-between;
+    opacity: 1;
+    height: auto;
+  }
+  .navbar__second-menu {
+    width: auto;
   }
 }
 
 @media (min-width: 1024px) {
-  .navbar {
-    /* padding: 10px; */
-    /* background-color: purple; */
-  }
-  .bg-dark {
-    /* padding: 20px 80px; */
+  .navbar__first-menu {
+    position: static;
+    width: 700px;
+    flex-direction: row;
+    justify-content: space-around;
+    opacity: 1;
+    height: auto;
   }
 }
 
