--- a/client/src/pages/Home/Home.css
+++ b/client/src/pages/Home/Home.css
@@ -1,56 +1,74 @@
 .home {
-  background: url("./home.jpg");
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
+  position: relative;
   min-width: 320px;
-  height: 100vh;
+  /* height: 100vh; */
   display: flex;
   flex-direction: column;
   align-items: center;
 }
-.home__content__side {
+.home__content__left {
+  order: 2;
   flex: 1;
 }
 .scan {
+  order: 1;
   flex: 1;
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-top: 20px;
 }
 .scan > img {
-  height: 400px;
+  height: 300px;
 }
 .home__sante {
   width: 100%;
-  background-color: rgb(185, 214, 214);
+  background-color: #f1be41;
+  /* color: #fff; */
   padding: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.home__sante p:first-child {
+  font-weight: 500;
+  font-size: 1.2rem;
+}
+.home__sante p {
+  text-align: center;
+  color: #020a15;
+}
+.home__sante > img {
+  margin-top: 20px;
+  height: 70px;
 }
 
 .home__content {
-  /* border: 1px solid red; */
-  height: 100vh;
+  background: url("./medium-bg.jpg");
+  background-size: cover;
+  background-position: right;
+  background-repeat: no-repeat;
+  height: 400px;
   display: flex;
+  flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
-  /* background-image: url ("backgournd.png"); */
-
-  margin-top: 100px;
+  margin-top: 70px;
   width: 100%;
   text-align: center;
 }
-.home__content h2 {
-  font-size: 3em;
+.home__content__left h2 {
+  display: none;
+  font-size: 1.4rem;
   color: #c42012;
 }
 
-.home__content p {
-  padding: 20px;
-  font-size: 1.1rem;
-  font-weight: 600;
-  color: #c42012;
+.home__content__left p {
+  display: none;
 }
-.home__content button {
+.home__content__left button {
+  order: 1;
   font-size: 1em;
   color: #fff;
   background-color: #c42012;
@@ -63,36 +81,146 @@
   outline: none;
   transition: 0.5s;
 }
-.home__content button:hover {
+.home__content__left button:hover {
   /* letter-spacing: 6px; */
   cursor: pointer;
-  background-color: #b82200;
+  background-color: #020a15;
+}
+.home__fonct {
+  padding: 20px;
+}
+.home__fonct > h4 {
+  text-align: center;
+  margin-bottom: 10px;
+}
+.home__fonct__step {
+  display: flex;
+  justify-content: flex-start;
+}
+.check-icon {
+  margin-right: 10px;
+  color: green;
+  font-size: 1.2rem;
+}
+
+.home__fonct__img {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.home__fonct__img img:first-child {
+  height: 200px;
+}
+.home__fonct__img img {
+  height: 250px;
+  margin-top: 5px;
+}
+
+.home__avantages {
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  width: 100%;
+}
+.home__avantages p {
+  text-align: center;
+  padding: 25px;
+  box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
+    rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+  margin-bottom: 20px;
+  border-radius: 10px;
 }
 
 @media (min-width: 480px) {
-  .home {
+  .home__content {
+    background: url("./medium-bg.jpg");
+    background-size: cover;
+    background-position: right;
+    background-repeat: no-repeat;
+  }
+  .home__fonct {
+    margin-top: 20px;
+    padding: 0;
+  }
+  .home__fonct__step {
+    padding: 10px;
+  }
+  .home__fonct__img {
+    justify-content: center;
+    margin-top: 20px;
+    flex-direction: row;
+  }
+  .home__fonct__img img {
+    margin: 15px;
   }
 }
 
 @media (min-width: 768px) {
-  .home {
+  .home__content {
+    background: url("./mlarge-bg.jpg");
+    background-size: cover;
+    background-position: right;
+    background-repeat: no-repeat;
+    flex-direction: row;
+    margin-top: 100px;
+    height: 500px;
+  }
+  .home__content__left {
+    order: 1;
+    flex: 1;
+    padding: 20px;
+  }
+  .home__content__left h2 {
+    display: block;
+    font-size: 2rem;
+  }
+  .home__content__left p {
+    display: block;
+    padding: 30px 70px;
+    font-size: 1rem;
+    font-weight: 500;
+  }
+  .scan,
+  .home__content__left button {
+    margin-top: 0;
+  }
+  .home__fonct__img img:first-child {
+    height: 250px;
+  }
+  .home__fonct__img img {
+    margin: 15px 30px;
   }
 }
 
 @media (min-width: 1024px) {
-  /* .home {
-    background: url("./bg1.jpg");
+  .home__content {
+    background: url("./large-bg.jpg");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-  } */
+  }
+  .home__content__left h2 {
+    display: block;
+    font-size: 2.5rem;
+  }
+  .home__content__left p {
+    padding: 30px 100px;
+  }
+  .home__avantages {
+    flex-direction: row;
+  }
+  .home__avantages p {
+    margin: 0 20px;
+  }
 }
 
 @media (min-width: 1280px) {
-  /* .home {
-    background: url("./bg.jpg");
+  .home__content {
+    background: url("./xlarge-bg.jpg");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-  } */
+  }
 }
