--- a/client/src/pages/WorkerSection/WorkerSection.css
+++ b/client/src/pages/WorkerSection/WorkerSection.css
@@ -62,6 +62,13 @@
   font-size: small;
   color: #48b9a0;
 }
+.comment {
+  margin-top: 10px;
+  text-transform: lowercase;
+  align-self: flex-start;
+  font-size: small;
+  color: #48b9a0;
+}
 .worker__orders__items__info {
   display: flex;
   justify-content: space-between;
