--- a/client/src/pages/Menu/Menu.css
+++ b/client/src/pages/Menu/Menu.css
@@ -3,6 +3,9 @@
   width: 50px;
 }
 .menu {
-  overflow: scroll;
-  height: 95vh;
+  border: 1px solid red;
+  display: flex;
+  flex-wrap: wrap;
+  /* width: 100%; */
+  flex: 2;
 }
