--- a/client/src/Components/ItemsMenu/ItemsMenu.css
+++ b/client/src/Components/ItemsMenu/ItemsMenu.css
@@ -10,23 +10,31 @@
   height: 70px;
   width: 70px;
 }
-.menu-item h4 {
-  font-weight: 400;
+.menu-item input {
+  border: none;
+  border-bottom: 1px solid var(--secondary-color);
+  margin: 5px 0;
+  font-size: 0.9rem;
+  height: 30px;
+  padding: 5px;
 }
-.menu-item button {
+.menu-item h4 {
+  text-transform: uppercase;
+  font-weight: 400;
+  overflow-wrap: break-word;
+}
+.menu-item__buttons {
+  margin-top: 10px;
+  display: flex;
+  /* border: 1px solid purple; */
+  justify-content: space-between;
+}
+.menu-item__buttons button {
   background: #c42012;
-  width: 100%;
-  height: 40px;
+  padding: 10px 20px;
   font-size: 0.9rem;
   border: none;
-  margin-top: 20px;
-
   color: white;
   outline: none;
   cursor: pointer;
-}
-.btn {
-  background-color: c42012;
-  width: 50px;
-  height: 30px;
 }
