--- a/client/src/pages/Menu/Menu.css
+++ b/client/src/pages/Menu/Menu.css
@@ -3,9 +3,33 @@
   width: 50px;
 }
 .menu {
-  border: 1px solid red;
+  /* border: 1px solid red; */
   display: flex;
-  flex-wrap: wrap;
-  /* width: 100%; */
-  flex: 2;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+}
+.menu > h5 {
+  font-size: 1.4rem;
+  font-weight: 400;
+  color: var(--primary-color);
+  margin: 20px 0;
+  /* border: 1px solid blue; */
+  /* text-align: center; */
+}
+
+@media (min-width: 480px) {
+}
+
+@media (min-width: 768px) {
+  .menu__cat__list {
+    display: flex;
+    width: 100%;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+  }
+}
+@media (min-width: 1024px) {
+}
+@media (min-width: 1280px) {
 }
