--- a/client/src/Components/AddRestaurant/AddRestaurant.css
+++ b/client/src/Components/AddRestaurant/AddRestaurant.css
@@ -1,9 +1,12 @@
 .addrestau {
-  height: 400px;
+  width: 300px;
+  height: auto;
   display: flex;
   flex-direction: column;
-  /* border: 1px solid orange; */
-  padding: 40px;
+  padding: 20px 30px;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+  background-color: white;
+  margin-bottom: 10px;
 }
 
 .logo-preview {
@@ -16,12 +19,14 @@
   font-weight: 400;
   margin-bottom: 10px;
   text-align: center;
+  line-height: 1.1rem;
 }
 
 .addrestau__form__group {
   position: relative;
 }
 .addrestau__form__group > h5 {
+  text-transform: uppercase;
   margin-bottom: 5px;
   font-weight: 400;
   color: #1b2431;
@@ -29,9 +34,14 @@
 .addrestau__form__group > span {
   position: absolute;
   right: 10px;
-  bottom: 5px;
+  bottom: 0;
   color: #c42012;
   font-size: 0.8rem;
+}
+.img-section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .addrestau__container__form__input {
@@ -85,7 +95,10 @@
 
 @media (min-width: 480px) {
   .addrestau {
-    /* background-color: green; */
+    width: auto;
+  }
+  .addrestau > h3 {
+    margin-bottom: 20px;
   }
 }
 
