--- a/client/src/Components/AddWorker/AddWorker.css
+++ b/client/src/Components/AddWorker/AddWorker.css
@@ -4,6 +4,8 @@
   display: flex;
   flex-direction: column;
   /* border: 1px solid orange; */
+  background-color: white;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
   padding: 40px;
 }
 
