--- a/client/src/Components/Navbar/Navbar.css
+++ b/client/src/Components/Navbar/Navbar.css
@@ -4,7 +4,7 @@
   align-items: center;
   justify-content: space-between;
   position: fixed;
-  padding: 20px;
+  padding: 10px;
   width: 100%;
   top: 0;
   left: 0;
@@ -20,7 +20,7 @@
   width: 100%;
   height: 150px;
   position: absolute;
-  top: 60px;
+  top: 45px;
   left: -100%;
   opacity: 0;
   transition: all 0.5s ease;
@@ -75,10 +75,10 @@
 
 @media (min-width: 480px) {
   .navbar {
-    /* padding: 40px 20px 0; */
+    padding: 20px;
   }
-  .bg-dark {
-    /* padding: 10px 20px; */
+  .navbar__first-menu {
+    top: 60px;
   }
 }
 
