--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,7 +2,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Poppins", sans-serif;
+  font-family: 'Poppins', sans-serif;
 }
 a {
   text-decoration: none;
@@ -17,4 +17,16 @@ body {
   height: 100%;
 
   /* border: 2px solid green; */
+}
+.spinner {
+  font-size: 1rem;
+  color: white;
+  animation: rotation 0.5s infinite linear;
+}
+.spinner--large {
+  font-size: 2rem;
+  color: var(--primary-color);
+  align-self: center;
+  margin-top: 50px;
+  animation: rotation 1s infinite linear;
 }
