--- a/client/src/pages/OwnerSection/OwnerSection.css
+++ b/client/src/pages/OwnerSection/OwnerSection.css
@@ -1,12 +1,13 @@
 .owner {
   /* border: 2px solid green; */
-  /* background-color: paleturquoise; */
+  background-color: var(--bg-light);
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
-  padding-top: 40px;
+  padding-top: 50px;
   width: 100%;
+  height: 100vh;
 }
 .logo-img {
   height: 50px;
@@ -14,7 +15,7 @@
 }
 @media (min-width: 480px) {
   .owner {
-    /* background-color: green; */
+    padding-top: 90px;
   }
 }
 
@@ -26,10 +27,6 @@
 
 @media (min-width: 1024px) {
   .owner {
-    flex-direction: row;
-    justify-content: space-evenly;
-    align-items: flex-start;
-    /* background-color: purple; */
   }
 }
 
