--- a/client/src/pages/SignIn/SignIn.css
+++ b/client/src/pages/SignIn/SignIn.css
@@ -35,7 +35,7 @@
 .signin__form__group > span {
   position: absolute;
   right: 10px;
-  bottom: 5px;
+  bottom: 0;
   color: #c42012;
   font-size: 0.8rem;
 }
@@ -50,9 +50,6 @@
 .valid__input {
   border-bottom: 1px solid #1b2431;
   background-color: white;
-}
-.error__input {
-  border-bottom: 1px solid #c42012;
 }
 
 .signin__container > p {
@@ -74,11 +71,6 @@
 }
 
 /* Spinner */
-.spinner {
-  font-size: 1rem;
-  color: white;
-  animation: rotation 0.5s infinite linear;
-}
 
 @keyframes rotation {
   from {
