--- a/client/src/Components/OrderList/OrderList.css
+++ b/client/src/Components/OrderList/OrderList.css
@@ -8,7 +8,9 @@
   /* padding-top: 70px; */
   margin-top: 30px;
 }
-
+.order__comment {
+  display: none;
+}
 .orders > h2 {
   font-weight: 400;
   margin-bottom: 20px;
@@ -70,6 +72,9 @@
 @media (min-width: 768px) {
   .orders__items {
     width: 700px;
+  }
+  .order__comment {
+    display: block;
   }
 }
 @media (min-width: 1024px) {
