--- a/client/src/Components/ScanCode/ScanCode.css
+++ b/client/src/Components/ScanCode/ScanCode.css
@@ -12,6 +12,23 @@
 .reader {
   /* border: 1px solid red; */
 }
+.auth-failed {
+  font-size: 4rem;
+  color: var(--primary-color);
+  align-self: center;
+  margin-bottom: 20px;
+}
+.message-client {
+  display: flex;
+  width: 300px;
+  flex-direction: column;
+
+  justify-content: center;
+  align-items: center;
+}
+.error-message > p {
+  font-size: 1.2rem;
+}
 
 @media (min-width: 480px) {
   .code {
