--- a/client/src/Components/ClientMenu/ClientMenu.css
+++ b/client/src/Components/ClientMenu/ClientMenu.css
@@ -8,34 +8,48 @@
 }
 
 .client-menu__nav > button {
-  background: #020a15;
+  background: var(--primary-color);
   padding: 10px 20px;
+  border: 2px solid var(--primary-color);
   font-size: 0.9rem;
-  border: none;
+  /* border: none; */
   color: white;
   outline: none;
   cursor: pointer;
+  border-radius: 5px;
+}
+.client-menu__nav > button:hover {
+  background-color: #020a15;
+  /* border: 2px solid var(--primary-color); */
 }
 .client-menu__nav {
-  /* border: 1px solid blue; */
+  background-color: #020a15;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
   position: fixed;
-  bottom: 10px;
+  bottom: 0;
+  padding: 10px;
   width: 100%;
 }
 
 .client-menu__link {
   text-decoration: none;
   background: #020a15;
+  border: 2px solid var(--primary-color);
   padding: 10px 20px;
   font-size: 0.9rem;
   color: white;
+  border-radius: 5px;
+}
+.client-menu__link:hover {
+  background-color: var(--primary-color);
 }
 
 .client-menu__categorie {
+  text-transform: uppercase;
   font-size: 1rem;
+  font-weight: 800;
   color: var(--primary-color);
   box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
   text-align: center;
@@ -49,6 +63,26 @@
   flex-direction: column;
   width: 100%;
   align-items: center;
+}
+.client-menu__menu {
+  display: flex;
+  min-width: 300px;
+  justify-content: space-between;
+}
+.client-menu__menu button {
+  border: none;
+  cursor: pointer;
+  outline: none;
+  padding: 10px 20px;
+  text-transform: uppercase;
+}
+.active-categorie {
+  background-color: var(--primary-color);
+  color: white;
+}
+.inactive-categorie {
+  color: black;
+  background-color: rgb(219, 219, 219);
 }
 
 @media (min-width: 480px) {
