--- a/client/src/Components/RestaurantListItem/RestaurantListItem.css
+++ b/client/src/Components/RestaurantListItem/RestaurantListItem.css
@@ -11,9 +11,10 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  /* border: 1px solid green; */
+  border: 1px solid green;
   margin-top: 10px;
   height: 200px;
+
   padding: 0 20px;
   justify-content: space-evenly;
   width: 100%;
@@ -82,6 +83,9 @@
   width: 80px;
   border-radius: 50%;
 }
+.restlist__list {
+  width: 100%;
+}
 
 .restlist__item {
   background-color: white;
@@ -92,6 +96,18 @@
   margin: 10px 0;
 }
 
+.staff__bouton {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+.staff__bouton span {
+  flex: 1;
+}
+.staff-icon {
+  flex: 1;
+  font-size: 1.5rem;
+}
 @media (min-width: 480px) {
   .restlist__item {
     width: auto;
