--- a/client/src/Components/AddRestaurant/AddRestaurant.css
+++ b/client/src/Components/AddRestaurant/AddRestaurant.css
@@ -95,7 +95,8 @@
 
 @media (min-width: 480px) {
   .addrestau {
-    width: auto;
+    width: 400px;
+    padding: 30px 50px 30px;
   }
   .addrestau > h3 {
     margin-bottom: 20px;
