--- a/client/src/Components/AddRestaurant/AddRestaurant.css
+++ b/client/src/Components/AddRestaurant/AddRestaurant.css
@@ -3,12 +3,11 @@
   height: auto;
   display: flex;
   flex-direction: column;
-  padding: 20px 30px;
+  padding: 30px;
   box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
   background-color: white;
   margin-bottom: 10px;
 }
-
 .logo-preview {
   height: 50px;
   width: 50px;
@@ -17,13 +16,14 @@
 .addrestau > h3 {
   color: #1b2431;
   font-weight: 400;
-  margin-bottom: 10px;
+  margin-bottom: 30px;
   text-align: center;
   line-height: 1.1rem;
 }
 
 .addrestau__form__group {
   position: relative;
+  margin-bottom: 20px;
 }
 .addrestau__form__group > h5 {
   text-transform: uppercase;
@@ -66,6 +66,7 @@
 }
 
 .addrestau__addrestauButton {
+  text-transform: uppercase;
   background: #c42012;
   width: 100%;
   height: 40px;
@@ -97,9 +98,6 @@
   .addrestau {
     width: 400px;
     padding: 30px 50px 30px;
-  }
-  .addrestau > h3 {
-    margin-bottom: 20px;
   }
 }
 
