--- a/client/src/pages/OwnerSection/OwnerSection.css
+++ b/client/src/pages/OwnerSection/OwnerSection.css
@@ -1,11 +1,11 @@
 .owner {
-  /* border: 2px solid green; */
+  border: 2px solid green;
   background-color: var(--bg-light);
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-between;
-  padding-top: 50px;
+
+  padding-top: 70px;
   width: 100%;
   height: 100vh;
 }
