--- a/client/src/pages/SignIn/SignIn.css
+++ b/client/src/pages/SignIn/SignIn.css
@@ -83,7 +83,7 @@
 @media (min-width: 480px) {
   .signin__container {
     width: 400px;
-    padding: 20px 50px 30px;
+    padding: 30px 50px;
   }
 }
 
