--- a/client/src/Components/Workers/Workers.css
+++ b/client/src/Components/Workers/Workers.css
@@ -2,10 +2,12 @@
   margin-top: 20px;
   width: 100%;
   padding: 5px;
-  /* border: 1px solid orange; */
+  display: flex;
+
+  flex-direction: column;
+  align-items: center;
 }
-.workerlist > h3,
-.workerlist > h5 {
+.workerlist > h3 {
   color: #1b2431;
   font-weight: 400;
   margin-bottom: 40px;
@@ -19,13 +21,20 @@
   justify-content: space-between;
   align-items: center;
   margin-bottom: 15px;
+  margin: 0 20px 15px;
 }
-.workerlist__item > h5 {
+.workerlist__item__info {
+  display: flex;
+}
+.workerlist__item__info > h4 {
   color: #1b2431;
   font-weight: 400;
 }
-.workerlist__item > span {
+.workerlist__item__info > span {
+  margin-left: 10px;
   text-transform: capitalize;
+  font-size: 1.1rem;
+  font-weight: 500;
 }
 .worker__btn {
   border: none;
@@ -34,10 +43,12 @@
   background-color: #c42012;
   color: white;
   cursor: pointer;
+  align-self: flex-end;
 }
 
 @media (min-width: 480px) {
-  .workerlist {
+  .workerlist__item {
+    width: 400px;
     /* background-color: green; */
   }
 }
