--- a/client/src/Components/AddTable/AddTable.css
+++ b/client/src/Components/AddTable/AddTable.css
@@ -1,12 +1,15 @@
 .add-table {
-  /* border: 1px solid blue; */
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+  padding: 20px;
   display: flex;
   flex-direction: column;
+  width: 300px;
 }
 .add-table > h3 {
+  text-transform: uppercase;
   color: #1b2431;
   font-weight: 400;
-  margin-bottom: 10px;
+  margin-bottom: 30px;
   text-align: center;
 }
 .add-table__form {
@@ -46,7 +49,7 @@
 .add-table__form__group > input {
   flex: 1;
   height: 30px;
-  width: 100%;
+  width: 40px;
   /* border: none; */
   outline: none;
   padding: 5px;
@@ -54,7 +57,8 @@
 
 @media (min-width: 480px) {
   .add-table {
-    /* background-color: green; */
+    width: 400px;
+    padding: 30px;
   }
 }
 
