--- a/client/src/Components/AddWorker/AddWorker.css
+++ b/client/src/Components/AddWorker/AddWorker.css
@@ -1,6 +1,6 @@
 .add-worker {
   width: 300px;
-  height: 400px;
+
   display: flex;
   flex-direction: column;
   /* border: 1px solid orange; */
@@ -12,13 +12,16 @@
 .add-worker > h3 {
   color: #1b2431;
   font-weight: 400;
-  margin-bottom: 40px;
+  margin-bottom: 20px;
+
   text-align: center;
 }
 .add-worker__form__group {
   position: relative;
+  margin: 10px 0;
 }
 .add-worker__form__group > h5 {
+  text-transform: uppercase;
   margin-bottom: 5px;
   font-weight: 400;
   color: #1b2431;
@@ -51,11 +54,12 @@
   width: 100%;
   height: 40px;
   font-size: 0.9rem;
+  margin-top: 10px;
   border: none;
-  margin-top: 40px;
   color: white;
   outline: none;
   cursor: pointer;
+  text-transform: uppercase;
 }
 
 @media (min-width: 480px) {
