--- a/client/src/pages/Menu/Menu.css
+++ b/client/src/pages/Menu/Menu.css
@@ -1,7 +1,3 @@
-.menu > img {
-  height: 50px;
-  width: 50px;
-}
 .menu {
   /* border: 1px solid red; */
   display: flex;
@@ -10,21 +6,18 @@
   width: 100%;
   padding-top: 20px;
 }
-.menu > h5 {
-  font-size: 1.4rem;
-  font-weight: 400;
-  color: var(--primary-color);
-  margin: 20px 0;
-}
+
 .menu__cat {
   font-size: 1rem;
-  color: var(--primary-color);
+  /* color: var(--primary-color); */
+  color: white;
   box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
   text-align: center;
-  background-color: white;
+  background-color: #c42012;
   margin: 10px 0 20px;
-  width: 250px;
+  width: 300px;
   border: none;
+  padding: 5px 0;
 }
 
 @media (min-width: 480px) {
