--- a/client/src/pages/OwnerSection/OwnerSection.css
+++ b/client/src/pages/OwnerSection/OwnerSection.css
@@ -1,13 +1,12 @@
 .owner {
-  border: 2px solid green;
   background-color: var(--bg-light);
   display: flex;
   flex-direction: column;
   align-items: center;
 
   padding-top: 70px;
+  padding-bottom: 50px;
   width: 100%;
-  height: 100vh;
 }
 .logo-img {
   height: 50px;
