--- a/client/src/Components/ScanCode/ScanCode.css
+++ b/client/src/Components/ScanCode/ScanCode.css
@@ -30,7 +30,8 @@
   font-size: 1.2rem;
 }
 .qr-reader {
-  border: 2px solid red;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+  padding: 20px 40px;
 }
 
 @media (min-width: 480px) {
