--- a/client/src/pages/MyOrder/MyOrder.css
+++ b/client/src/pages/MyOrder/MyOrder.css
@@ -9,9 +9,10 @@
 }
 .order > h1 {
   margin-bottom: 30px;
+  font-weight: 500;
 }
 .order__item {
-  padding: 10px 0;
+  padding: 10px;
   width: 100%;
   border-bottom: 1px dotted lightgray;
   display: flex;
@@ -31,7 +32,9 @@
   display: flex;
   justify-content: space-between;
   width: 100%;
-  background-color: #00fdb1;
+  text-transform: uppercase;
+  color: white;
+  background-color: #48b9a0;
 }
 
 @media (min-width: 480px) {
