--- a/client/src/Components/ClientMenu/ClientMenu.css
+++ b/client/src/Components/ClientMenu/ClientMenu.css
@@ -5,6 +5,8 @@
   /* justify-content: center; */
   align-items: center;
   width: 100%;
+  background-color: var(--bg-light);
+  height: 100%;
 }
 
 .client-menu__nav > button {
@@ -12,7 +14,7 @@
   padding: 10px;
   border: 2px solid var(--primary-color);
   font-size: 0.9rem;
-  /* border: none; */
+
   color: white;
   outline: none;
   cursor: pointer;
