--- a/client/src/Components/ScanCode/ScanCode.css
+++ b/client/src/Components/ScanCode/ScanCode.css
@@ -32,6 +32,7 @@
 .qr-reader {
   box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
   padding: 20px 40px;
+  background-color: white;
 }
 
 @media (min-width: 480px) {
