--- a/client/src/Components/TableList/TableList.css
+++ b/client/src/Components/TableList/TableList.css
@@ -4,6 +4,8 @@
   justify-content: center;
   align-items: center;
   padding-top: 50px;
+
+  width: 100%;
 }
 .table-list > h4 {
   color: var(--primary-color);
