--- a/client/src/Components/Tables/Tables.css
+++ b/client/src/Components/Tables/Tables.css
@@ -1,14 +1,12 @@
 .tables {
-  /* border: 1px solid red; */
   display: flex;
   flex-direction: column;
   justify-content: center;
   margin-top: 20px;
-  width: 100%;
 }
 .tables__single-table {
   margin-bottom: 20px;
-  width: 100%;
+  width: 300px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -53,8 +51,8 @@
 }
 
 @media (min-width: 480px) {
-  .tables {
-    /* background-color: green; */
+  .tables__single-table {
+    width: 400px;
   }
 }
 
