--- a/client/src/pages/MyOrder/MyOrder.css
+++ b/client/src/pages/MyOrder/MyOrder.css
@@ -3,18 +3,23 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 20px 0;
+  padding: 20px 10px;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
   min-width: 320px;
-  /* border: 1px solid red; */
+  background-color: white;
+
+  margin-bottom: 50px;
 }
-.order > h1 {
-  margin-bottom: 30px;
+.order > h2 {
+  margin-bottom: 20px;
+  color: var(--primary-color);
   font-weight: 500;
+  font-weight: 400;
 }
 .order__item {
   padding: 10px;
   width: 100%;
-  border-bottom: 1px dotted lightgray;
+  border-bottom: 1px dotted #48b9a0;
   display: flex;
   justify-content: space-between;
 }
@@ -35,6 +40,17 @@
   text-transform: uppercase;
   color: white;
   background-color: #48b9a0;
+}
+.client-menu__nav__back {
+  background: var(--primary-color);
+  padding: 10px;
+  border: 2px solid var(--primary-color);
+  font-size: 0.9rem;
+
+  color: white;
+  outline: none;
+  cursor: pointer;
+  border-radius: 5px;
 }
 
 @media (min-width: 480px) {
