--- a/client/src/pages/OwnerSection/OwnerSection.css
+++ b/client/src/pages/OwnerSection/OwnerSection.css
@@ -3,10 +3,10 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-
   padding-top: 70px;
   padding-bottom: 50px;
   width: 100%;
+  height: 100%;
 }
 .logo-img {
   height: 50px;
